--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules/
 .env # si tu as des fichiers secrets
 dist/ # builds Electron
+node_modules/
+.env
+dist/
+*.exe # bloque tous les .exe lourds
+desktop/hostit-desktop/node_modules/ # cible précis
